fixed bug in similarity matrix

--- a/labs_2024/1-indexer.ipynb
+++ b/labs_2024/1-indexer.ipynb
@@ -1530,7 +1530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -1562,7 +1562,7 @@
     "        cos_similarity = cosine_similarity(text1, text2)\n",
     "        print(\"%1.4f\" % cos_similarity, end='\\t')\n",
     "        if cos_similarity > most_sim and text1 != text2:\n",
-    "            max_similarity = cos_similarity\n",
+    "            most_sim = cos_similarity\n",
     "            most_sim_doc1 = text1\n",
     "            most_sim_doc2 = text2\n",
     "    print()"
@@ -1577,19 +1577,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Most similar: gosta.txt herrgard.txt Similarity: 0.0031103994916004446\n"
+      "Most similar: jerusalem.txt herrgard.txt Similarity: 0.3706894238733824\n"
      ]
     }
    ],
    "source": [
-    "print(\"Most similar:\", most_sim_doc1, most_sim_doc2, \"Similarity:\", max_similarity)"
+    "print(\"Most similar:\", most_sim_doc1, most_sim_doc2, \"Similarity:\", most_sim)"
    ]
   },
   {
