--- a/labs_2024/2-language_models.ipynb
+++ b/labs_2024/2-language_models.ipynb
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +273,7 @@
        " 'bandet']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +308,7 @@
        "44256"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +337,7 @@
        "41032"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +434,7 @@
        "'En gång hade de på Mårbacka en barnpiga som hette Back Kajsa. Hon var nog sina tre alnar lång hon hade ett stort grovt ansikte med stränga mörka drag hennes händer voro hårda och fulla av sprickor som barnens hår fastnade i när hon kammade dem och till humöret var hon dyster och sorgbunden.'"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -693,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -709,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -748,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -765,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -811,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -849,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -872,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -900,7 +900,7 @@
        " ('dagvisan', 2)]"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -919,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -938,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -966,7 +966,7 @@
        " (('den', 'kristliga'), 2)]"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1046,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1073,7 +1073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1082,7 +1082,7 @@
        "['det', 'var', 'en', 'gång', 'en', 'katt', 'som', 'hette', 'nils', '</s>']"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1095,7 +1095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1129,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1138,7 +1138,7 @@
        "423"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1190,7 +1190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1225,7 +1225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1234,7 +1234,7 @@
        "['det', 'var', 'en', 'gång', 'en', 'katt', 'som', 'hette', 'nils', '</s>']"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1245,7 +1245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1279,7 +1279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1288,7 +1288,7 @@
        "72"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1341,7 +1341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1361,7 +1361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1370,7 +1370,7 @@
        "330"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1396,7 +1396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1405,7 +1405,7 @@
        "'de'"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1424,7 +1424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1433,32 +1433,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Write your code here\n",
-    "v"
+    "filtered_words = [(key, val) for key, val in frequency_bigrams.items() if '<s>' == key[0] and starting_text == key[1][:len(starting_text)] ]\n",
+    "sorted_filtered_words = sorted(filtered_words, key=lambda item: (-item[1], item[1]))[:10]\n",
+    "current_word_predictions_1 = [key[1] for key, val in sorted_filtered_words]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['det', 'de', 'den', 'dem', 'detta']"
+       "['det', 'de', 'den', 'detta', 'denna']"
       ]
      },
-     "execution_count": 182,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "current_word_predictions_1"
+    "current_word_predictions_1\n"
    ]
   },
   {
@@ -1470,7 +1472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1479,7 +1481,7 @@
        "'det var en '"
       ]
      },
-     "execution_count": 254,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1498,17 +1500,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Write your code here\n",
-    "tokens = tokenize(current_text)"
+    "tokens = tokenize(current_text)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1517,7 +1519,7 @@
        "['det', 'var', 'en']"
       ]
      },
-     "execution_count": 256,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1535,7 +1537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1547,7 +1549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1556,7 +1558,7 @@
        "['stor', 'liten', 'gammal', 'god', 'sådan']"
       ]
      },
-     "execution_count": 258,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1574,7 +1576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1584,7 +1586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1596,7 +1598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -1605,27 +1607,7 @@
        "['gammal', 'god', 'gång', 'ganska', 'glädje']"
       ]
      },
-     "execution_count": 263,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "current_word_predictions_2\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 264,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['gammal', 'god', 'gång', 'ganska', 'glädje']"
-      ]
-     },
-     "execution_count": 264,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
